--- a/style.css
+++ b/style.css
@@ -380,3 +380,45 @@ p {
   height: 2px;
   background-color: var(--color-dark-white);
 }
+
+/* Testimonials */
+#testimonials {
+  background-color: var(--color-light-white);
+}
+
+.testimonials {
+  margin: 40px;
+}
+
+.testimonial {
+  display: flex;
+  margin: 32px 0;
+}
+
+.testimonial__avartar {
+  width: 150px;
+  height: 150px;
+  border-radius: 50%;
+}
+
+.testimonial__avartar:nth-child(odd) {
+  margin-right: 40px;
+}
+
+.testimonial__avartar:nth-child(even) {
+  margin-left: 40px;
+}
+
+.testimonal__speech-bubble {
+  padding: 18px;
+  background-color: var(--color-white);
+  border-radius: var(--size-border-radius);
+}
+
+.testimonal__speech-bubble p {
+  color: var(--color-light-grey);
+}
+
+.testimonal__speech-bubble a {
+  color: var(--color-pink);
+}
