--- a/style.css
+++ b/style.css
@@ -346,6 +346,13 @@ p {
   display: flex;
   flex-wrap: wrap;
   justify-content: center;
+  opacity: 1;
+  transition: all var(--annimation-duration) ease-out;
+}
+
+.work__projects.anim-out {
+  opacity: 0;
+  transform: scale(0.96) translateY(40px);
 }
 
 .project {
@@ -357,6 +364,10 @@ p {
   height: 250px;
   margin: 2px;
   background-color: var(--color-light-white);
+}
+
+.project.invisible {
+  display: none;
 }
 
 .project__img {
@@ -469,6 +480,22 @@ p {
 .contact__links i:hover {
   transform: scale(1.1);
   color: var(--color-yellow);
+}
+
+/* Arrow */
+.arrow-up {
+  opacity: 0;
+  font-size: var(--font-large);
+  color: var(--color-pink);
+  position: fixed;
+  bottom: 40px;
+  right: 30px;
+  transition: all var(--annimation-duration) ease-in;
+  pointer-events: none;
+}
+.arrow-up.visible {
+  opacity: 100;
+  pointer-events: auto;
 }
 
 /* For below 768px screen width */
